Fix modernizer errors